# Lab_20

./: CMakeLists.txt
Libs/Lab_20/: Lab_20.c  Lab_20.h
Libs/algorithms/: algorithms.c  algorithms.h
Libs/files/: files.c  files.h
Libs/matrix/: matrix.c  matrix.h
Libs/set_bits/: set_bits.c  set_bits.h
Libs/set_ordered/: set_ordered.c  set_ordered.h
Libs/set_unordered/: set_unordered.c  set_unordered.h
Libs/string/: string.c  string.h
Libs/test/: test.c  test.h
Libs/vector/: vector.c  vector.h
Libs/vector_void/: vector_void.c  vector_void.h
